WPP-65 support for portlet preferences storing user specific authentication credentials

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,4 +16,11 @@
 # specific language governing permissions and limitations
 # under the License.
 #
+edit.proxy.title=Proxy User IDs and Passwords
+edit.proxy.column.value=Value
+edit.proxy.column.name=Name
+edit.proxy.save.preferences=Save Preferences
+edit.proxy.show.preferences.link=Configure Login Information
+edit.proxy.cancel=Cancel
 
+portlet.preferences.missing=(configure login information)
