WPP-69 - Updating to show error message in UI if encryption error occurs - Adding catch all error page (mimicing emailplt) - Updating comment in gateway config to indicate a bean that is not a part of the zimbra example
- Change security class to match EmailPreview's implementation
- Catches when encryption key is at default and logs ERROR message with no stack trace
- Exposes boolean indicating encryption key is at default value
- Uses annotation for bean initialization

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,3 +24,12 @@ edit.proxy.show.preferences.link=Configure Login Information
 edit.proxy.cancel=Cancel
 
 portlet.preferences.missing=(configure login information)
+
+## error.jsp
+error.message.refresh=Refresh
+error.message.first=ERROR! - Unable to retrieve information for Web Proxy Portlet!
+error.message.second=Please try again later.
+
+## pswEncError.jsp
+error.message.enc.first=Password encryption service has failed.
+error.message.enc.second=Make sure the <i>encryption password</i> is properly specified in configuration.properties and has not changed since you entered your password.
