WPP-74 Add role-based support for GatewayEntries

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -30,6 +30,8 @@ portlet.preferences.missing=(configure login information)
 error.message.refresh=Refresh
 error.message.first=ERROR! - Unable to retrieve information for Web Proxy Portlet!
 error.message.second=Please try again later.
+error.message.invalid.beanName=Error: Bean name is not valid or permissions do not allow access
+error.message.invalid.index=Troubleshoot using index parameter displayed in browser address bar.
 
 ## pswEncError.jsp
 error.message.enc.first=Password encryption service has failed.
