WPP-75 Add Loading message after clicking on gateway link

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,6 +26,9 @@ edit.proxy.cancel=Cancel
 
 portlet.preferences.missing=(configure login information)
 
+portlet.logging.in.display=Please wait while you are logged into the system...
+portlet.logging.in.title=Logging in
+
 ## error.jsp
 error.message.refresh=Refresh
 error.message.first=ERROR! - Unable to retrieve information for Web Proxy Portlet!
@@ -35,4 +38,4 @@ error.message.invalid.index=Troubleshoot using index parameter displayed in brow
 
 ## pswEncError.jsp
 error.message.enc.first=Password encryption service has failed.
-error.message.enc.second=Make sure the <i>encryption password</i> is properly specified in configuration.properties and has not changed since you entered your password.
+error.message.enc.second=Make sure the <strong>encryption password</strong> is properly specified in configuration.properties and has not changed since you entered your password.
