WPP-72 WPP-73 WPP-78:  Change bulk credential edit > per-entry credential edit;  Add 'Clear credentials' feature

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,7 +24,8 @@ edit.proxy.save.preferences=Save Preferences
 edit.proxy.show.preferences.link=Configure Login Information
 edit.proxy.cancel=Cancel
 
-portlet.preferences.missing=(configure login information)
+portlet.preferences.clear.credentials=Clear credentials
+portlet.preferences.missing=Configure login information
 
 portlet.logging.in.display=Please wait while you are logged into the system...
 portlet.logging.in.title=Logging in
