WPP-76 credential validation, fix issues with last several Jira

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,15 +17,15 @@
 # under the License.
 #
 
-edit.proxy.title=Proxy User IDs and Passwords
 edit.proxy.column.value=Value
 edit.proxy.column.name=Name
 edit.proxy.save.preferences=Save Preferences
-edit.proxy.show.preferences.link=Configure Login Information
 edit.proxy.cancel=Cancel
+edit.proxy.error.message.inconsistent.field.values=All fields must be empty or must have a value.
 
 portlet.preferences.clear.credentials=Clear credentials
-portlet.preferences.missing=Configure login information
+portlet.preferences.missing=(Must configure login information)
+portlet.preferences.missing.title=Configure login information
 
 portlet.logging.in.display=Please wait while you are logged into the system...
 portlet.logging.in.title=Logging in
