WPP-83 Add configurable webproxy char decoding, fix edit pref issues, improve edit page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,6 +17,8 @@
 # under the License.
 #
 
+save=Save
+
 edit.proxy.column.value=Value
 edit.proxy.column.name=Name
 edit.proxy.save.preferences=Save Preferences
