WPP-86 Add messages for configuration screen

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,6 +24,11 @@ edit.proxy.column.name=Name
 edit.proxy.save.preferences=Save Preferences
 edit.proxy.cancel=Cancel
 edit.proxy.error.message.inconsistent.field.values=All fields must be empty or must have a value.
+edit.proxy.url.instructions=App URL may include Spring EL expressions. The Spring EL context will include all properties from app-launcher.properties, all request parameters namespaced as "request" and all properties from the user-info map namespaced as "user". Examples:
+edit.proxy.url.instructions.ex1=http://${server}:${port}/service/view?param=${request.param}
+edit.proxy.url.instructions.ex2=http://${server}:${port}/service/view?userId=${user['user.login.id']}
+edit.proxy.url.instructions.ex3=http://${server}:${port}/service/view/${request['form.itemId']}
+edit.proxy.url.advancedUrlOptions=Advanced URL Options
 
 portlet.preferences.clear.credentials=Clear credentials
 portlet.preferences.missing=(Must configure login information)
