--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,10 +24,10 @@ edit.proxy.column.name=Name
 edit.proxy.save.preferences=Save Preferences
 edit.proxy.cancel=Cancel
 edit.proxy.error.message.inconsistent.field.values=All fields must be empty or must have a value.
-edit.proxy.url.instructions=App URL may include Spring EL expressions. The Spring EL context will include all properties from app-launcher.properties, all request parameters namespaced as "request" and all properties from the user-info map namespaced as "user". Examples:
-edit.proxy.url.instructions.ex1=http://${server}:${port}/service/view?param=${request.param}
-edit.proxy.url.instructions.ex2=http://${server}:${port}/service/view?userId=${user['user.login.id']}
-edit.proxy.url.instructions.ex3=http://${server}:${port}/service/view/${request['form.itemId']}
+edit.proxy.url.instructions=App URL may include Spring EL expressions surrounded by ${}. The Spring EL context will include: all properties from a configured properties file namespaced as "property"; all request parameters namespaced as "requestParam"; all attributes from the user-info map namespaced as "user"; the PortletRequest object as "request"; the tokens protocol, server, port, contextPath represent the current WebProxyPortlet URL; and a bean in the spring context can be accessed as @beanName. Maps (property, requestParam, user) can be accessed as property.item or property['item']. Examples:
+edit.proxy.url.instructions.ex1=${protocol}://${server}:${port}/${contextPath}/service/view?param=${requestParam.paramName}
+edit.proxy.url.instructions.ex2=https://${server}:${port}/contentserver/service/view?userId=${user['user.login.id']}
+edit.proxy.url.instructions.ex3=${property['service.base.url']}/service/view/${requestParam['form.itemId']}
 edit.proxy.url.advancedUrlOptions=Advanced URL Options
 
 portlet.preferences.clear.credentials=Clear credentials
